crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S017_S017.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S017 quote array assignment expansions to avoid accidental splitting
 --> <source>:4:6
  |
4 | arr=($x prefix$x $@ $* ${items[@]} ${x:-a b} $HOME/*.txt)
  |

S017 quote array assignment expansions to avoid accidental splitting
 --> <source>:4:15
  |
4 | arr=($x prefix$x $@ $* ${items[@]} ${x:-a b} $HOME/*.txt)
  |

S017 quote array assignment expansions to avoid accidental splitting
 --> <source>:4:18
  |
4 | arr=($x prefix$x $@ $* ${items[@]} ${x:-a b} $HOME/*.txt)
  |

S017 quote array assignment expansions to avoid accidental splitting
 --> <source>:4:21
  |
4 | arr=($x prefix$x $@ $* ${items[@]} ${x:-a b} $HOME/*.txt)
  |

S017 quote array assignment expansions to avoid accidental splitting
 --> <source>:4:24
  |
4 | arr=($x prefix$x $@ $* ${items[@]} ${x:-a b} $HOME/*.txt)
  |

S017 quote array assignment expansions to avoid accidental splitting
 --> <source>:4:36
  |
4 | arr=($x prefix$x $@ $* ${items[@]} ${x:-a b} $HOME/*.txt)
  |

S017 quote array assignment expansions to avoid accidental splitting
 --> <source>:4:46
  |
4 | arr=($x prefix$x $@ $* ${items[@]} ${x:-a b} $HOME/*.txt)
  |

S017 quote array assignment expansions to avoid accidental splitting
 --> <source>:5:17
  |
5 | declare listed=($x)
  |

S017 quote array assignment expansions to avoid accidental splitting
 --> <source>:6:7
  |
6 | arr+=($tail)
  |
