crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S018_S018.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S018 avoid splitting command output directly into arrays; use mapfile or read -a
 --> <source>:3:6
  |
3 | arr=($(printf '%s\n' a b))
  |

S018 avoid splitting command output directly into arrays; use mapfile or read -a
 --> <source>:4:6
  |
4 | arr=(`printf '%s\n' c d`)
  |

S018 avoid splitting command output directly into arrays; use mapfile or read -a
 --> <source>:5:12
  |
5 | arr=(prefix$(printf '%s\n' e f)suffix)
  |

S018 avoid splitting command output directly into arrays; use mapfile or read -a
 --> <source>:6:17
  |
6 | declare listed=($(printf '%s\n' one two))
  |

S018 avoid splitting command output directly into arrays; use mapfile or read -a
 --> <source>:7:7
  |
7 | arr+=($(printf '%s\n' tail))
  |
