crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S019_S019.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S019 use grep's exit status instead of testing its output
 --> <source>:2:3
  |
2 | [ "$(grep foo input.txt)" ]
  |

S019 use grep's exit status instead of testing its output
 --> <source>:3:3
  |
3 | [ -n "$(grep foo input.txt)" ]
  |

S019 use grep's exit status instead of testing its output
 --> <source>:4:3
  |
4 | [ -z "$(grep foo input.txt)" ]
  |

S019 use grep's exit status instead of testing its output
 --> <source>:5:4
  |
5 | [[ $(grep foo input.txt) ]]
  |

S019 use grep's exit status instead of testing its output
 --> <source>:6:4
  |
6 | [[ -n $(grep foo input.txt) ]]
  |

S019 use grep's exit status instead of testing its output
 --> <source>:7:4
  |
7 | [[ -z $(grep foo input.txt) ]]
  |

S019 use grep's exit status instead of testing its output
 --> <source>:8:4
  |
8 | [[ $(egrep foo input.txt) ]]
  |

S019 use grep's exit status instead of testing its output
 --> <source>:9:4
  |
9 | [[ -n $(fgrep foo input.txt) ]]
  |

S019 use grep's exit status instead of testing its output
  --> <source>:10:28
   |
10 | [[ -n "$1" && ! -f "$1" && -n "$(echo "$1" | GREP_OPTIONS="" \grep -v '^-')" ]]
   |
