crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S020_S020.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 114
---
S020 this `for` loop iterates over a single item
 --> <source>:3:13
  |
3 | for item in a; do
  |

S020 this `for` loop iterates over a single item
 --> <source>:7:13
  |
7 | for item in "a"; do
  |

S020 this `for` loop iterates over a single item
  --> <source>:11:13
   |
11 | for item in "${TERMUX_SCRIPTDIR}"/packages/python/0009-fix-ctypes-util-find_library.patch; do
   |

S020 this `for` loop iterates over a single item
  --> <source>:15:13
   |
15 | for item in "$(printf /tmp)"/x.patch; do
   |

S020 this `for` loop iterates over a single item
  --> <source>:19:13
   |
19 | for item in ~; do
   |
