crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S021_S021.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 175
---
S021 all-elements splats inside larger strings collapse argument boundaries
 --> <source>:6:16
  |
6 | printf '%s\n' "$@$@"
  |

S021 all-elements splats inside larger strings collapse argument boundaries
 --> <source>:7:16
  |
7 | printf '%s\n' "$@""$@"
  |

S021 all-elements splats inside larger strings collapse argument boundaries
 --> <source>:8:23
  |
8 | printf '%s\n' "items: $@"
  |

S021 all-elements splats inside larger strings collapse argument boundaries
 --> <source>:9:16
  |
9 | printf '%s\n' x$@y
  |

S021 all-elements splats inside larger strings collapse argument boundaries
  --> <source>:10:2
   |
10 | x$@y --version
   |

S021 all-elements splats inside larger strings collapse argument boundaries
  --> <source>:11:8
   |
11 | if [ "_$@" = "_--version" ]; then :; fi
   |

S021 all-elements splats inside larger strings collapse argument boundaries
  --> <source>:12:23
   |
12 | printf '%s\n' "items: ${args[@]}"
   |

S021 all-elements splats inside larger strings collapse argument boundaries
  --> <source>:13:23
   |
13 | printf '%s\n' "items: ${!args[@]}"
   |

S021 all-elements splats inside larger strings collapse argument boundaries
  --> <source>:14:23
   |
14 | printf '%s\n' "items: ${args[@]:1}"
   |

S021 all-elements splats inside larger strings collapse argument boundaries
  --> <source>:15:23
   |
15 | printf '%s\n' "items: ${args[@]/a/b}"
   |

S021 all-elements splats inside larger strings collapse argument boundaries
  --> <source>:16:23
   |
16 | printf '%s\n' "items: ${args[@]+foo}"
   |

S021 all-elements splats inside larger strings collapse argument boundaries
  --> <source>:17:23
   |
17 | printf '%s\n' "items: ${args[@]+ ${args[*]}}"
   |
