crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S022_S022.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S022 prefer arithmetic expansion instead of `let`
 --> <source>:2:1
  |
2 | let 10
  |
