crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S023_S023.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 40
---
S023 a backslash before a regular character is unnecessary in a plain word
 --> <source>:3:9
  |
3 | echo foo\_bar
  |

S023 a backslash before a regular character is unnecessary in a plain word
 --> <source>:6:9
  |
6 | echo foo\_bar_baz
  |
