crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S024_S024.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 42
---
S024 a backslash at the end of a single-quoted string is literal
 --> <source>:3:11
  |
3 | sed -i '$a\' "$1"
  |
