crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S025_S025.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 44
---
S025 a backslash before a normal letter is literal
 --> <source>:3:6
  |
3 | echo \q
  |

S025 a backslash before a normal letter is literal
 --> <source>:4:15
  |
4 | printf '%s\n' \q
  |
