crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S026_S026.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 46
---
S026 a backslash before n, r, or t is literal
 --> <source>:3:6
  |
3 | echo \n
  |

S026 a backslash before n, r, or t is literal
 --> <source>:4:9
  |
4 | echo foo\nbar
  |

S026 a backslash before n, r, or t is literal
 --> <source>:5:8
  |
5 | foo=bar\r
  |

S026 a backslash before n, r, or t is literal
 --> <source>:6:14
  |
6 | case x in foo\t) : ;; esac
  |

S026 a backslash before n, r, or t is literal
 --> <source>:7:10
  |
7 | cat < foo\nbar
  |

S026 a backslash before n, r, or t is literal
 --> <source>:8:7
  |
8 | `echo \n`
  |
