crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S027_S027.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 48
---
S027 a backslash before `_` is unnecessary and becomes a literal underscore
 --> <source>:3:9
  |
3 | echo foo\_bar
  |
