crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S028_S028.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S028 quote is closed but the following character looks ambiguous
 --> <source>:3:7
  |
3 | if [[ "$@" =~ x ]]; then :; fi
  |
